# robot-nav-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
configs/: default.yaml
docs/: algorithms.md  benchmark.md  release_notes.md
navsim/: __init__.py  benchmark.py  cli.py  collision.py  control.py  costmap.py  dynamic.py  local_planner.py  localization.py  map.py  metrics.py  planner.py  sensors.py  sim.py  viz.py
navsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/: benchmark.csv  benchmark_astar.csv  benchmark_dijkstra.csv  benchmark_summary.csv  benchmark_summary.md  benchmark_theta.csv
scripts/: plot_benchmark.py  plot_benchmark_compare.py  run_benchmark.py  run_demo.py  update_benchmark_report.py
tests/: test_collision.py  test_costmap.py  test_dynamic.py  test_local_planner.py  test_localization.py  test_metrics.py  test_planner.py
