[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navsim"
version = "0.1.0"
description = "Minimal 2D robot navigation demo with planning and control."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib",
  "imageio",
  "pyyaml",
]

[project.scripts]
navsim-demo = "navsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["navsim*"]
